# repoanalyzer

./: .gitignore  README.md  analyzer.go  go.mod  go.sum  renovate.json
.cid/: state-github.json
.github/workflows/: cid-main.yml  cid-nightly.yml  cid-pull-request.yml  cid-release.yml  cid.yml
analyzer/: analyzer.go  scanners.go
analyzer/apispec/: apispec.go
analyzer/cargo/: cargo.go  cargo_test.go  parser.go
analyzer/composer/: composer.go  composer_test.go  parser_composer.go  parser_composer_test.go
analyzer/container/: container.go
analyzer/dotnet/: dotnet.go  dotnet_test.go
analyzer/gomod/: gomod.go  gomod_test.go
analyzer/gradle/: gradle.go  gradle_test.go  parser.go  parser_groovy.go  parser_kotlin.go  parser_test.go
analyzer/helm/: helm.go  helm_test.go
analyzer/hugo/: hugo.go  hugo_test.go
analyzer/maven/: maven.go  maven_test.go
analyzer/mkdocs/: mkdocs.go  mkdocs_test.go
analyzer/nix/: nix.go  nix_test.go
analyzer/node/: node.go  node_test.go  parser.go
analyzer/python/: python.go  python_analyzer.go  python_test.go
analyzerapi/: factory.go  test.go  types.go  util.go
logger/: logger.go
modules/ansible/: ansible.go  ansible_test.go
modules/apispec/: apispec.go  apispec_test.go
modules/cargo/: cargo.go  cargo_test.go  parser_test.go
modules/composer/: composer.go  composer_test.go
modules/container/: container.go
modules/deploymentdotenv/: deployment.go  deployment_test.go
modules/dotnet/: dotnet.go  dotnet_test.go
modules/githubworkflow/: githubworkflow.go  githubworkflow_test.go
modules/gitlabci/: gitlabci.go  gitlabci_test.go
modules/gomod/: gomod.go  gomod_test.go
modules/gradle/: gradle.go  gradle_test.go  parser.go  parser_kotlin.go
modules/helm/: helm.go  helm_test.go
modules/helmfile/: helmfile.go  helmfile_test.go  parse.go  parse_test.go
modules/hugo/: hugo.go
modules/maven/: maven.go  parser.go
modules/mkdocs/: mkdocs.go
modules/nix/: nix.go
modules/node/: node.go  node_test.go
modules/python/: parse.go  python.go  python_test.go
modules/quartz/: quartz.go  quartz_test.go
modules/renovate/: renovate.go  renovate_test.go
repoanalyzer/: analyzer.go  scanners.go
testdata/cargo/: Cargo.toml
testdata/composer/: composer.json
testdata/deploymentdotenv/: .env-dev
testdata/dotnet/: HelloWorld.csproj
testdata/fossa-examples/: java-project.json
testdata/gomod/: go.mod
testdata/helmfile/: helmfile-dev.yaml
testdata/helmfile-env/: helmfile.yaml
testdata/helmfile-gotmpl/: helmfile.yaml.gotmpl
testdata/maven/: pom.xml
testdata/python-poetry/: pyproject.toml
testdata/python-uv/: pyproject.toml
testdata/react/: package.json
testdata/renovate/: renovate.json
util/: filesystem.go
(+4 files in other folders)
