[package]
name = "my-project"
version = "0.1.0"
authors = ["Firstname Lastname <firstname.lastname@example.com>"]
edition = "2021"
license = "MIT"
description = """
Multiline
Description
"""
homepage = "https://github.com/my-org/my-project"
repository = "https://github.com/my-org/my-project"
exclude = ["images/*"]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

git2 = { version= "0.18.1", features = [ "vendored-openssl" ] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
serde_derive = "1.0"
serde = "1.0"
error-stack = "0.4.1"
shellexpand = "3.1.0"
aho-corasick = "1.0.1"
shell-words = "1.1.0"
config = { version = "0.14", default-features = false, features = ["toml"] }
toml = "0.8"
dirs = "5.0.1"
nucleo = "0.3.0"
ratatui = "0.26.0"
crossterm = "0.27.0"

[[bin]]
name = "mybin"
path = "src/main.rs"

[dev-dependencies]
once_cell = "1.18.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
